@@ -6,7 +6,9 @@ export("%l+%")
 export(hash)
 export(hash_look)
 export(hms2sec)
+export(id)
 export(lookup)
+export(pad)
 export(repo2github)
 export(sec2hms)
 export(text2color)
