@@ -106,15 +106,15 @@ returned from <code>hash</code>, to lookup values.</p>
 x &lt;- sample(DF[, 1], 20, TRUE)
 hash_look(x, new.hash1)
 </div>
-<div class='output'> [1] 25.34286 22.40000 19.70000 19.70000 15.00000 25.34286 15.00000 22.40000 15.00000 16.30000 15.00000 15.00000
-[13] 25.34286 25.34286 16.30000 16.30000 22.40000 25.34286 15.00000 19.70000
+<div class='output'> [1] 15.79000 16.30000 22.40000 16.30000 19.70000 15.00000 15.00000 15.00000 19.70000 19.70000 22.40000 15.79000
+[13] 15.79000 25.34286 15.00000 22.40000 15.79000 19.70000 22.40000 22.40000
 </div>
 <div class='input'>
 new.hash2 &lt;- hash(DF, &quot;character&quot;) #character outcome
 x %ha% new.hash2
 </div>
-<div class='output'> [1] &quot;25.34286&quot; &quot;22.40000&quot; &quot;19.70000&quot; &quot;19.70000&quot; &quot;15.00000&quot; &quot;25.34286&quot; &quot;15.00000&quot; &quot;22.40000&quot; &quot;15.00000&quot; &quot;16.30000&quot;
-[11] &quot;15.00000&quot; &quot;15.00000&quot; &quot;25.34286&quot; &quot;25.34286&quot; &quot;16.30000&quot; &quot;16.30000&quot; &quot;22.40000&quot; &quot;25.34286&quot; &quot;15.00000&quot; &quot;19.70000&quot;
+<div class='output'> [1] &quot;15.79000&quot; &quot;16.30000&quot; &quot;22.40000&quot; &quot;16.30000&quot; &quot;19.70000&quot; &quot;15.00000&quot; &quot;15.00000&quot; &quot;15.00000&quot; &quot;19.70000&quot; &quot;19.70000&quot;
+[11] &quot;22.40000&quot; &quot;15.79000&quot; &quot;15.79000&quot; &quot;25.34286&quot; &quot;15.00000&quot; &quot;22.40000&quot; &quot;15.79000&quot; &quot;19.70000&quot; &quot;22.40000&quot; &quot;22.40000&quot;
 </div></pre>
   </div>
   <div class="span4">
