@@ -1,0 +1,123 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+<title>id. qdapTools 0.0.3</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="">
+
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap-responsive.css" rel="stylesheet">
+<link href="css/highlight.css" rel="stylesheet">
+<link href="css/staticdocs.css" rel="stylesheet">
+
+<!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+  </head>
+
+  <body>
+    <div class="navbar">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="brand" href="#">qdapTools 0.0.3</a>
+      <div class="nav">
+        <ul class="nav">
+          <li><a href="index.html"><i class="icon-home icon-white"></i> Index</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <div class="container">
+      <header>
+        
+      </header>
+      
+      <h1>ID By Row Number or Sequence Along</h1>
+
+<div class="row">
+  <div class="span8">
+    <h2>Usage</h2>
+    <pre><div>id(x, prefix&nbsp;=&nbsp;FALSE, pad&nbsp;=&nbsp;TRUE, ...)</div></pre>
+    
+    <h2>Arguments</h2>
+    <dl>
+      <dt>x</dt>
+      <dd>A dataframe, matrix, vector, or list object.</dd>
+      <dt>prefix</dt>
+      <dd>logical.  If <code>TRUE</code> an "X." is place
+  before each id.</dd>
+      <dt>pad</dt>
+      <dd>logical.  If <code>TRUE</code> the beginning number
+  will be padded with zeros.</dd>
+      <dt>...</dt>
+      <dd>Other arguments passed to
+  <code>link[qdapTools]{pad}</code>.</dd>
+    </dl>
+    
+    <div class="Value">
+      <h2>Value</h2>
+      
+      <p>Returns a vector of sequential integers.</p>
+  
+    </div>
+
+    <div class="Description">
+      <h2>Description</h2>
+      
+      <p>Generate a sequence of integers the
+<code><a href='http://www.inside-r.org/r-doc/base/length'>length</a></code>/<code><a href='http://www.inside-r.org/r-doc/base/nrow'>ncol</a></code> of an
+object.</p>
+  
+    </div>
+    
+    <h2 id="examples">Examples</h2>
+    <pre class="examples"><div class='input'>id(list(1, 4, 6))
+</div>
+<div class='output'>[1] &quot;1&quot; &quot;2&quot; &quot;3&quot;
+</div>
+<div class='input'>id(matrix(1:10, ncol=1))
+</div>
+<div class='output'> [1] &quot;01&quot; &quot;02&quot; &quot;03&quot; &quot;04&quot; &quot;05&quot; &quot;06&quot; &quot;07&quot; &quot;08&quot; &quot;09&quot; &quot;10&quot;
+</div>
+<div class='input'>id(mtcars)
+</div>
+<div class='output'> [1] &quot;01&quot; &quot;02&quot; &quot;03&quot; &quot;04&quot; &quot;05&quot; &quot;06&quot; &quot;07&quot; &quot;08&quot; &quot;09&quot; &quot;10&quot; &quot;11&quot; &quot;12&quot; &quot;13&quot; &quot;14&quot; &quot;15&quot; &quot;16&quot; &quot;17&quot; &quot;18&quot; &quot;19&quot; &quot;20&quot; &quot;21&quot; &quot;22&quot;
+[23] &quot;23&quot; &quot;24&quot; &quot;25&quot; &quot;26&quot; &quot;27&quot; &quot;28&quot; &quot;29&quot; &quot;30&quot; &quot;31&quot; &quot;32&quot;
+</div>
+<div class='input'>id(mtcars, TRUE)
+</div>
+<div class='output'> [1] &quot;X.01&quot; &quot;X.02&quot; &quot;X.03&quot; &quot;X.04&quot; &quot;X.05&quot; &quot;X.06&quot; &quot;X.07&quot; &quot;X.08&quot; &quot;X.09&quot; &quot;X.10&quot; &quot;X.11&quot; &quot;X.12&quot; &quot;X.13&quot; &quot;X.14&quot; &quot;X.15&quot; &quot;X.16&quot;
+[17] &quot;X.17&quot; &quot;X.18&quot; &quot;X.19&quot; &quot;X.20&quot; &quot;X.21&quot; &quot;X.22&quot; &quot;X.23&quot; &quot;X.24&quot; &quot;X.25&quot; &quot;X.26&quot; &quot;X.27&quot; &quot;X.28&quot; &quot;X.29&quot; &quot;X.30&quot; &quot;X.31&quot; &quot;X.32&quot;
+</div>
+<div class='input'>id(&quot;w&quot;)
+</div>
+<div class='output'>[1] &quot;1&quot;
+</div>
+<div class='input'>## &lt;strong&gt;Not run&lt;/strong&gt;: 
+# library(qdap)
+# question_type(DATA.SPLIT$state, id(DATA.SPLIT, TRUE))
+# ## &lt;strong&gt;End(Not run)&lt;/strong&gt;
+</div></pre>
+  </div>
+  <div class="span4">
+    <!-- <ul>
+      <li>id</li>
+    </ul>
+    <ul>
+      <li>id</li>
+    </ul> -->
+      
+        
+  </div>
+</div>
+      
+      <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+<p>Built by <a href="https://github.com/hadley/staticdocs">staticdocs</a>. Styled with <a href="http://twitter.github.com/bootstrap">bootstrap</a>.</p>
+      </footer>
+    </div>
+  </body>
+</html>
