@@ -1,0 +1,126 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+<title>pad. qdapTools 0.0.3</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="">
+
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap-responsive.css" rel="stylesheet">
+<link href="css/highlight.css" rel="stylesheet">
+<link href="css/staticdocs.css" rel="stylesheet">
+
+<!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+  </head>
+
+  <body>
+    <div class="navbar">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="brand" href="#">qdapTools 0.0.3</a>
+      <div class="nav">
+        <ul class="nav">
+          <li><a href="index.html"><i class="icon-home icon-white"></i> Index</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <div class="container">
+      <header>
+        
+      </header>
+      
+      <h1>Pad Strings</h1>
+
+<div class="row">
+  <div class="span8">
+    <h2>Usage</h2>
+    <pre><div>pad(x, padding&nbsp;=&nbsp;max(nchar(as.character(x))), sort&nbsp;=&nbsp;TRUE, type&nbsp;=&nbsp;"detect")</div></pre>
+    
+    <h2>Arguments</h2>
+    <dl>
+      <dt>x</dt>
+      <dd>A character, factor, numeric vector.</dd>
+      <dt>padding</dt>
+      <dd>Number of characters to pad.  Default
+  makes all elements of a string the number of characters
+  of the element with the maximum characters.</dd>
+      <dt>sort</dt>
+      <dd>logical.  If <code>TRUE</code> the outcome is
+  sorted.</dd>
+      <dt>type</dt>
+      <dd>A character string of <code>"detect"</code>,
+  <code>"numeric"</code>, <code>"character"</code>, <code>"d"</code> or
+  <code>"s"</code>.  If numeric zeros are padded. If character
+  spaces are padded.  The <code>detect</code> attempts to
+  determine if x is numeric (d) or not (s).</dd>
+    </dl>
+    
+    <div class="Value">
+      <h2>Value</h2>
+      
+      <p>Returns a character vector every element padded with
+0/spaces.</p>
+  
+    </div>
+
+    <div class="Description">
+      <h2>Description</h2>
+      
+      <p>A convenience wrapper for <code><a href='http://www.inside-r.org/r-doc/base/sprintf'>sprintf</a></code> that
+pads the front end of strings with spaces or 0s. Useful for
+creating multiple uniform directories that will maintain
+correct order.</p>
+  
+    </div>
+    
+    <h2 id="examples">Examples</h2>
+    <pre class="examples"><div class='input'>pad(sample(1:10, 10))
+</div>
+<div class='output'> [1] &quot;01&quot; &quot;02&quot; &quot;03&quot; &quot;04&quot; &quot;05&quot; &quot;06&quot; &quot;07&quot; &quot;08&quot; &quot;09&quot; &quot;10&quot;
+</div>
+<div class='input'>pad(sample(1:10, 10), sort=FALSE)
+</div>
+<div class='output'> [1] &quot;08&quot; &quot;10&quot; &quot;07&quot; &quot;02&quot; &quot;09&quot; &quot;05&quot; &quot;01&quot; &quot;04&quot; &quot;03&quot; &quot;06&quot;
+</div>
+<div class='input'>pad(as.character(sample(1:10, 10)))
+</div>
+<div class='output'> [1] &quot; 1&quot; &quot; 2&quot; &quot; 3&quot; &quot; 4&quot; &quot; 5&quot; &quot; 6&quot; &quot; 7&quot; &quot; 8&quot; &quot; 9&quot; &quot;10&quot;
+</div>
+<div class='input'>pad(as.character(sample(1:10, 10)), sort=FALSE)
+</div>
+<div class='output'> [1] &quot; 6&quot; &quot; 8&quot; &quot; 7&quot; &quot; 5&quot; &quot; 4&quot; &quot;10&quot; &quot; 1&quot; &quot; 2&quot; &quot; 3&quot; &quot; 9&quot;
+</div>
+<div class='input'>pad(as.character(sample(1:10, 10)), 4)
+</div>
+<div class='output'> [1] &quot;   1&quot; &quot;   2&quot; &quot;   3&quot; &quot;   4&quot; &quot;   5&quot; &quot;   6&quot; &quot;   7&quot; &quot;   8&quot; &quot;   9&quot; &quot;  10&quot;
+</div></pre>
+  </div>
+  <div class="span4">
+    <!-- <ul>
+      <li>pad</li>
+    </ul>
+    <ul>
+      
+    </ul> -->
+      
+    <h2>See also</h2>
+    
+<code><a href='http://www.inside-r.org/r-doc/base/sprintf'>sprintf</a></code>
+
+        
+  </div>
+</div>
+      
+      <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+<p>Built by <a href="https://github.com/hadley/staticdocs">staticdocs</a>. Styled with <a href="http://twitter.github.com/bootstrap">bootstrap</a>.</p>
+      </footer>
+    </div>
+  </body>
+</html>
