@@ -23,6 +23,12 @@ BUG FIXES
 
 NEW FEATURES
 
+* `id` a function to generate a sequence of integers the `length`/`nrow` of an 
+  object.
+
+* `pad` a convenience wrapper for `sprintf` that pads the front end of strings 
+  with spaces or 0s.
+
 MINOR FEATURES
 
 IMPROVEMENTS
